--- a/index.html
+++ b/index.html
@@ -2,31 +2,25 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
   <title>PureJS</title>
-  <script type="text/html" id="home">
-    <h1>Start <%= where %>!</h1>
-  </script>
-  <script type="text/html" id="example1">
-    <h1><%= title %></h1>
-    <% for (let i of title) { %>
-      <span><%= i %></span>
-    <% } %>
-  </script>
-  <script type="text/html" id="example2">
-    <h1><%= title %></h1>
-    <button class="my-button">Click me <%= counter %></button>
-  </script>
-  <script type="text/html" id="404">
-    <h1>404 Not found</h1>
-  </script>
 </head>
-<body>
-  <nav>
-    <a href="#">home</a>
-    <a href="#/ex1">example 1</a>
-    <a href="#/ex2">example 2</a>
+<body class="container">
+  <nav class="container">
+    <div class="row justify-content-center text-center">
+      <div class="col-3">
+        <a href="#" class="link">Home</a>
+      </div>
+      <div class="col-3">
+        <a href="#/success" class="link">Success</a>
+      </div>
+
+    </div>
   </nav>
   <div id="app"></div>
   <script src="./app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </body>
 </html>
