--- a/index.html
+++ b/index.html
@@ -9,14 +9,10 @@
 </head>
 <body class="container">
   <nav class="container">
-    <div class="row justify-content-center text-center">
+    <div class="row justify-content-start text-end">
       <div class="col-3">
         <a href="#" class="link">Home</a>
       </div>
-      <div class="col-3">
-        <a href="#/success" class="link">Success</a>
-      </div>
-
     </div>
   </nav>
   <div id="app"></div>
